feature: implement deserializers and improve test. #26