@@ -48,6 +48,9 @@
 			<!-- Running tests -->
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
+				</configuration>
 			</plugin>
 
 			<!-- Running JavaFX code -->
