@@ -35,7 +35,6 @@
 					<version>3.0.0-M5</version>
 					<configuration>
 						<redirectTestOutputToFile>true</redirectTestOutputToFile>
-						<argLine>--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
 					</configuration>
 				</plugin>
 			</plugins>
